feat: add contact reviews and categories
